# messenger-rust

./: Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: client-demo.rs  main.rs
old/src/: client.rs  main.rs  server.rs  user.rs
server/: Cargo.toml
server/src/: axum-chat-demo.rs  axum-websockets-demo.rs  main.rs  server-demo.rs
user/src/: lib.rs
