[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# user = { path = "../user" }
axum = { version = "0.5.6", features = ["ws", "headers"] }
futures = "0.3"
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
